[B]0.2.1[/B]
- Test viewtype
- Readability improvements
- OSD color changer
- Bug fixes

[B]0.2.0[/B]
- New list layout
- Rewrite of Posterfix
- New iconset
- Bug fixes

[B]0.1.9[/B]
- Custom weather icons
- qwerty keyboard
- UserIcon
- Bug fixes

B]0.1.8[/B]
- Change to Gotham widget loading
- Improved startup time
- Improved settings for widgets
- Fixed window close and fade glitch

[B]0.1.7[/B]
- Change to <left> positioning
- Posterview made into fixedlist
- Playercontrols and indicators moved to include

[B]0.1.5[/B]
- Font change to Weblysleek

[B]0.1.5[/B]
- Live tv Channel switching added.
- Loads of fixes

[B]0.1.2[/B]
- Layout improvements.
- Bugs.

[B]0.1.0[/B]
- Main menu can now slide, lockable in settings.
- Changed some views to better fit sliding main menu.


[B]0.1.0[/B]
- Reworked Bookmarks.
- Added custom widgets function.
- Improved fanart view.
- Improved homescreen widget container.

[B]0.0.9[/B]
- Changed dialog colors.
- Dots on the i.

[B]0.0.8[/B]
- Icons.
- Screenshots.
- Dialogs
- Global fanart

[B]0.0.7[/B]
- Addon info.
- Music Visuals (adapt to lyrics).
- Bugs

[B]0.0.6[/B]
- Homescreen grouplist.
- Mandatory controls.

[B]0.0.5[/B]
- Remaining strings.
- Bugs.

[B]0.0.4[/B]
- Info dialogs.
- Strings in dialogs.

[B]0.0.3[/B]
- Music Osd.
- Parent folder items.

[B]0.0.2[/B]
- Bugs.

[B]0.0.1[/B]
- Start pre-Alpha versions.