@@ -19,48 +19,49 @@
   <effect type="fade" start="100" end="0" time="350" delay="0" />
 </animation>
 
-<visible>!Window.IsVisible(infodialog)</visible>
-<animation effect="fade" start="100" end="0" time="150">Hidden</animation>
-<animation effect="fade" start="0" end="100" time="150">Visible</animation>
-
 
 <!-- control type="textbox" id="9">
 	<include>HiddenButton</include>
 </control -->
 
-	<control type="image">
-		<include>SearchButton</include>
-		<texture>osd/GrayBackground.png</texture>
-		<aspectratio>stretch</aspectratio>
-	</control>
-	
-	<control type="button" id="10">
-		<include>SearchButton</include>
-		<texturefocus>osd/kai.png</texturefocus>
-		<texturenofocus>osd/kai.png</texturenofocus>
-		<onclick>Sendclick(10)</onclick>
-		<textcolor>03FFFFFF</textcolor>
-		<focusedcolor>03FFFFFF</focusedcolor>
-		<disabledcolor>03FFFFFF</disabledcolor>
-	</control>
-  
-	
-	
-	<control type="label" id="1">
-		<include>TopLabelBig</include>
-		<haspath>yes</haspath>
-		<animation effect="fade" start="100" end="0" time="150" condition="Window.IsActive(infodialog)">Conditional</animation>
-		<animation effect="fade" start="0" end="1000" time="150" condition="!Window.IsActive(infodialog)">Conditional</animation>
-	</control>
-	
-	<control type="label" id="2">
-		<include>TopLabelSmall</include>
-		<!-- label>$INFO[Control.GetLabel(9)]</label -->
-		<animation effect="fade" start="100" end="0" time="150" condition="Window.IsActive(infodialog)">Conditional</animation>
-		<animation effect="fade" start="0" end="1000" time="150" condition="!Window.IsActive(infodialog)">Conditional</animation>
-	</control>
+	<control type="group">
+	<visible>!Window.IsVisible(infodialog)</visible>
+	<animation effect="fade" start="100" end="0" time="150">Hidden</animation>
+	<animation effect="fade" start="0" end="100" time="150">Visible</animation>
 
- </control> 
+		<control type="image">
+			<include>SearchButton</include>
+			<texture>osd/GrayBackground.png</texture>
+			<aspectratio>stretch</aspectratio>
+		</control>
+		
+		<control type="button" id="10">
+			<include>SearchButton</include>
+			<texturefocus>osd/kai.png</texturefocus>
+			<texturenofocus>osd/kai.png</texturenofocus>
+			<!-- onclick>Sendclick(10)</onclick -->
+			<textcolor>03FFFFFF</textcolor>
+			<focusedcolor>03FFFFFF</focusedcolor>
+			<disabledcolor>03FFFFFF</disabledcolor>
+		</control>
+	  
+		
+		
+		<control type="label" id="1">
+			<include>TopLabelBig</include>
+			<haspath>yes</haspath>
+			<animation effect="fade" start="100" end="0" time="150" condition="Window.IsActive(infodialog)">Conditional</animation>
+			<animation effect="fade" start="0" end="1000" time="150" condition="!Window.IsActive(infodialog)">Conditional</animation>
+		</control>
+		
+		<control type="label" id="2">
+			<include>TopLabelSmall</include>
+			<!-- label>$INFO[Control.GetLabel(9)]</label -->
+			<animation effect="fade" start="100" end="0" time="150" condition="Window.IsActive(infodialog)">Conditional</animation>
+			<animation effect="fade" start="0" end="1000" time="150" condition="!Window.IsActive(infodialog)">Conditional</animation>
+		</control>
+
+	</control> 
  
 	<!-- not in group because some addons keep infodialog open during progress -->
 	<control type="progress"><!--  id="20" -->
@@ -68,16 +69,17 @@
 		<left>-55</left>
 		<top>63</top>
 		<width>1335</width>
-		<height>1</height>
-		<texturebg>DialogProgressBack.png</texturebg>
+		<height>3</height>
+		<texturebg>transparent.png</texturebg>
 		<lefttexture>-</lefttexture>
-		<midtexture>osd/osdbg.png</midtexture>
+		<midtexture>white.png</midtexture>
 		<righttexture>-</righttexture>
 		<info>System.Progressbar</info>
+		<colordiffuse>hellblue</colordiffuse>
 		<visible>![Window.IsVisible(fullscreenvideo) | Window.IsVisible(visualisation)]</visible>
 	</control>
   
-  
+ </control> 
 </controls>
   
 </window>
