@@ -329,7 +329,7 @@
 	</variable>
 	
 	<variable name="Polaroid_Extra">
-		<value condition="Container.Content(songs)">$INFO[ListItem.Artist]$INFO[ListItem.Rating, , ♥][CR]$INFO[ListItem.Album, ]</value>
+		<value condition="Container.Content(songs)">$INFO[ListItem.Artist]$INFO[ListItem.Rating, , ♥][CR]$INFO[ListItem.Album]</value>
 		<value condition="Container.Content(movies)">$INFO[ListItem.Duration,, Min ]$INFO[ListItem.Rating, , ♥]$INFO[ListItem.Genre, ]</value>
 		<value condition="Container.Content(tvshows)">$INFO[ListItem.Property(TotalEpisodes),, $LOCALIZE[31179] ]$INFO[ListItem.Property(UnWatchedEpisodes),, $LOCALIZE[31180] ]$INFO[ListItem.Genre]</value>
 		<value condition="Container.Content(seasons)">$INFO[ListItem.Property(TotalEpisodes),$LOCALIZE[31179] ]</value>
