@@ -190,7 +190,7 @@
 					
 
 					<control type="group">
-					<visible>Container.Content(episodes) + Control.HasFocus(637)</visible>
+					<visible>Container.Content(episodes) + Control.HasFocus(637) + !substring(ListItem.Label,..,left)</visible>
 					<animation effect="fade" start="0" end="100" time="300" delay="5000" reversable="false" >Focus</animation>
 					<animation effect="fade" start="100" end="0" time="0" reversable="false" >UnFocus</animation>
 
